# rentbot_platform

./: .dockerignore  .env  .env.example  DEPLOY_SERVER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  models.py
app/bot/: __init__.py  factory.py
app/services/: auth.py  bot_runtime.py  tenant_db.py
app/web/: dependencies.py
app/web/routers/: auth.py  bots.py  dashboard.py
app/web/static/: style.css
app/web/templates/: base.html  bot_create.html  bot_detail.html  bots.html  dashboard.html  login.html
deploy/: nginx.rentbot.conf.example
scripts/: check_deploy_ready.sh
tests/: test_security.py  test_security_unittest.py  test_tenant_db.py
