[project]
name = "rentbot-platform"
version = "0.1.0"
description = "Multi-tenant polling bot platform with FastAPI admin panel and aiogram 3.26.0"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.26.0",
    "asyncpg>=0.29,<1.0",
    "bcrypt>=3.2,<4.0",
    "fastapi>=0.115,<1.0",
    "itsdangerous>=2.2,<3.0",
    "jinja2>=3.1,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "pydantic-settings>=2.4,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "python-slugify>=8.0,<9.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "uvloop>=0.19,<1.0; sys_platform != 'win32'",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
